fixed the overflow on the header component

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -69,7 +69,7 @@
   width: 200px;
   padding: 15px;
   color: var(--charcoal);
-  left: -50%;
+  left: -110%;
   height: auto;
   box-shadow: 0 1px 30px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
